[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprite/player/ship.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://scene/laser.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.02565
height = 8.37309

[node name="Player" type="Area2D"]
z_index = 1
collision_layer = 3
collision_mask = 2147483651
script = ExtResource( 2 )
laser = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
